--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Martin Cabrera | WDD 130</title>  
   <meta name="description" content="Martin Cabrera website for wdd130, rafting services">
-  <meta name="author" content="Martin Cabrera.">
+  <meta name="author" content="Martin Cabrera">
 
   <link rel="stylesheet" href="styles/styles.css">
 </head>
