--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <aside>
         <h2>Montevideo, Uruguay</h2> 
         <img src="images/montevideo-uruguay.jpg" alt="Montevideo, Uruguay">
-        <p>Montevideo is the capital city of Uruguay. Uruguay is a small country in South America border by Argentina, Brazil and the South Atlantic Ocean. It is known for behing a stable country as far as politics and socio-economics goes and has a great soccer team considering it's 3.5 million inhabitants.</p>
+        <p>Montevideo is the capital city of Uruguay in South America. Uruguay is a small country in South America border by Argentina, Brazil and the South Atlantic Ocean. It is known for behing a stable country as far as politics and socio-economics goes and has a great soccer team considering it's 3.5 million inhabitants.</p>
       </aside>
 <footer>
         <h1> Martin Cabrera | WDD 130</h1>
