--- a/index.html
+++ b/index.html
@@ -17,15 +17,16 @@
         <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
       </nav>
     </header>
+    <main>
       <h1> Martin Cabrera | WDD 130</h1>
         <img src="images/profile.jpg"  alt="Martin Cabrera" width="200">
         <p>My name is Martin Cabrera, I've been married for 10 years now and have 3 kids. I served my mission in Dallas, TX, and they were the best 2 years for the rest of my life</p>        
-        <aside>
-          <h2>Montevideo, Uruguay</h2> 
-          <img src="images/montevideo-uruguay.jpg" alt="Montevideo, Uruguay">
-          <p>Montevideo is the capital city of Uruguay in South America. Uruguay is a small country in South America border by Argentina, Brazil and the South Atlantic Ocean. It is known for behing a stable country as far as politics and socio-economics goes and has a great soccer team considering it's 3.5 million inhabitants.</p>
-        </aside>
-    </main>      
+    </main>
+    <aside>
+      <h2>Montevideo, Uruguay</h2> 
+      <img src="images/montevideo-uruguay.jpg" alt="Montevideo, Uruguay">
+      <p>Montevideo is the capital city of Uruguay in South America. Uruguay is a small country in South America border by Argentina, Brazil and the South Atlantic Ocean. It is known for behing a stable country as far as politics and socio-economics goes and has a great soccer team considering it's 3.5 million inhabitants.</p>
+    </aside>        
     <footer>
         <p>©️ 2023 Martin Cabrera Uruguay </p>        
     </footer>  
