adding source and second h2

--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -20,8 +20,14 @@
         </ul>
     </nav>
     <main>
-        <h2>Article 1</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis, atque.</p>
+        <section>
+            <h2>Article 1</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis, atque.</p>
+        </section>
+        <section>
+            <h2>Article 2</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis, atque.</p>
+        </section>
     </main>
     <aside>
         <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/montevideo-uruguay/800x500/montevideo-uruguay-temple-lds-83476-wallpaper.jpg" alt="Montevideo, Uruguay Temple" width="200">
